--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 5%;
     padding: 0;
     font-family: sans-serif;
 }
@@ -10,6 +10,10 @@ body {
 
 .selected {
     background-color: aquamarine;
+}
+
+#appContainer {
+    display: flex;
 }
 
 
